vX.Y.Z (YYYY-MM-DD)

- Fix pgsql-load-db to not start multiple processes for single partition data
  loading, which weren't doing anything
- Parallelize some of the plotting in the generate-report and pgsql-report
  scripts

v0.53.9 (2024-02-07)

- Fix pgsql-create-db logic for checking if the database already exists
v0.53.8 (2024-01-08)

- Fix test for touchstone tools in "run" script

v0.53.7 (2023-09-29)

- Remove dated psql scripts
- psql: Do not attempt to create database if it already exists, so that errors
  due to a lack of permissions to create database can be effectively trapped
- Add --tablespaces option to dbt2-build script to specify where tablespace
  devices are mounted or symlinked
- Fix handling of tablespace flag for creating tables when using
  dbt2-pgsql-build-db

v0.53.6 (2023-09-04)

- driver3 now processes -L flag to limit number of connections by limited the
  number of processes forked
- pgsql-build-db: fix execution of pgsql-load-db and pgsql-create-index so
  that parameters are handled correctly when the -l argument is not used

v0.53.5 (2023-08-25)

- Handle host names greater than 31 characters, now up to 255.
- Fix detection of touchstone tools for collecting database stats

v0.53.4 (2023-07-11)

- Fix version flag usage with AppImages
- Add OpenSSH to AppImage
- Fix dbt2-run --client-connections= command line handling
- Add ssh to the AppImage

v0.53.3 (2023-06-29)

- Update touchstone tool commands to use "ts", enabling use of ts-tools
  AppImage, requires at minimum touchstone-tools v0.6.x
- Update scripts to use "dbt2" where appropriate, enabling use of dbt2 AppImage
- Fix handling of -altered flag in "run" script for driver mode 1
- Bump touchstone-tools version to v0.7.1 for gathering postgresql stats
  supporting v15
- Restrict AppImage "activate" script to bash shells

v0.53.2 (2023-06-19)

- Quiet sqlite3 post-process script from displaying an error when there are no
  New Order transactions